[project]
name = "opt-uc3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "azure-cosmos>=4.5.0",
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.19.0",
    "claude-agent-sdk==0.2.110",
    "fastapi>=0.139.0",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.50.2",
]
